@@ -1,1 +1,8 @@
 # sistemiOperativiThread
+## Richiesto
+- jre 11+
+
+## Esecuzione
+```
+java --module-path ".\resources\lib\java fx\win\lib" --add-modules javafx.controls -jar SO_Habib
+```
